--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - 'monorepo'
 
 jobs:
-  docker:
+  helm-publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
