--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
             dir=$(dirname "$f")
             while [ "$dir" != "." ]; do
               if [ -f "$dir/Chart.yaml" ]; then
-                version=$(helm inspect "$dir" --version)
+                version=$(helm inspect chart "$dir" | grep version | awk '{print $2}')
                 helm package "$dir" --version "$version" --destination .
                 helm push . --tls --tls-verify --repo "oci://${{ steps.login-ecr.outputs.registry }}"
                 break
