--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,8 +37,8 @@ jobs:
             while [ "$dir" != "." ]; do
               if [ -f "$dir/Chart.yaml" ]; then
                 version=$(helm inspect chart "$dir" | grep version | awk '{print $2}')
-                helm package "$dir" --version "$version" --destination "$dir"
-                helm push "$dir-$version.tgz" "oci://${{ steps.login-ecr.outputs.registry }}"
+                helm package "$dir" --version "$version"
+                helm push "$(basename $(pwd))-$version.tgz" "oci://${{ steps.login-ecr.outputs.registry }}"
                 break
               fi
               dir=$(dirname "$dir")
