--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
               if [ -f "$dir/Chart.yaml" ]; then
                 version=$(helm inspect chart "$dir" | grep version | awk '{print $2}')
                 helm package "$dir" --version "$version"
-                helm push "$(basename $($dir))-$version.tgz" "oci://${{ steps.login-ecr.outputs.registry }}"
+                helm push "$(basename $dir)-$version.tgz" "oci://${{ steps.login-ecr.outputs.registry }}"
                 break
               fi
               dir=$(dirname "$dir")
