--- a/charts/hello-chart/values.yaml
+++ b/charts/hello-chart/values.yaml
@@ -12,7 +12,7 @@ image:
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: ""
+fullnameOverride: "something"
 
 serviceAccount:
   # Specifies whether a service account should be created
