--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: ci
 
 on:
   push:
-    tags:
-      - '*'
+#     tags:
+#       - '*'
 
 jobs:
   docker:
@@ -12,25 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - id: tag
         run: echo ::set-output name=TAG::${GITHUB_REF#refs/*/}
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: arn:aws:iam::489099442433:role/GitHubECRActionRole
-          role-duration-seconds: 3600
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build, tag, and push docker image to Amazon ECR
+      - name: push change
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          TAG: ${{ steps.tag.outputs.TAG }}
-        shell: bash
+          TEST: ${{ secrets.Test }}
         run: |
-          helm package hello-chart --version $TAG
-          helm push hello-chart-$TAG.tgz oci://$REGISTRY
+          printenv
+
+    
